--- a/test_drive/analysis_options.yaml
+++ b/test_drive/analysis_options.yaml
@@ -34,3 +34,4 @@ linter:
     prefer_final_fields: false
     unnecessary_breaks: true
     use_key_in_widget_constructors: false
+    file_names: true
